# Triangle-Paths

./: CMakeLists.txt  README.md  main.cpp
Logic/: MinimalPath.cpp  MinimalPath.h  MinimalTrianglePath.cpp  MinimalTrianglePath.h  TerminalProgram.cpp  TerminalProgram.h
